# fittle

./: .gitignore  Cargo.toml  LICENSE  README.md
profile-gen/: Cargo.toml
profile-gen/src/: field_data.rs  main.rs
profile-gen/src/helpers/: mod.rs  sorted.rs  with_lookup.rs
profile-gen/templates/: enum.handlebars  enums.handlebars  enums_mod.handlebars  message.handlebars  messages_mod.handlebars
src/: bits.rs  data_types.rs  enums.rs  fields.rs  main.rs  message.rs  messages.rs  parser.rs  types.rs
src/fields/: date_time.rs  macros.rs  mod.rs  units.rs
src/profile/: enums.rs  mod.rs
src/profile/enums/: activity.rs  activity_class.rs  activity_level.rs  activity_subtype.rs  activity_type.rs  analog_watchface_layout.rs  ant_network.rs  antplus_device_type.rs  attitude_stage.rs  attitude_validity.rs  auto_activity_detect.rs  auto_sync_frequency.rs  autolap_trigger.rs  autoscroll.rs  backlight_mode.rs  backlight_timeout.rs  battery_status.rs  bench_press_exercise_name.rs  bike_light_beam_angle_mode.rs  bike_light_network_config_type.rs  body_location.rs  bp_status.rs  calf_raise_exercise_name.rs  camera_event_type.rs  camera_orientation_type.rs  cardio_exercise_name.rs  carry_exercise_name.rs  checksum.rs  chop_exercise_name.rs  comm_timeout_type.rs  connectivity_capabilities.rs  core_exercise_name.rs  course_capabilities.rs  course_point.rs  crunch_exercise_name.rs  curl_exercise_name.rs  date_mode.rs  date_time.rs  day_of_week.rs  deadlift_exercise_name.rs  (+110 more)
src/profile/messages/: accelerometer_data.rs  activity.rs  ant_channel_id.rs  ant_rx.rs  ant_tx.rs  aviation_attitude.rs  barometer_data.rs  bike_profile.rs  blood_pressure.rs  cadence_zone.rs  camera_event.rs  (+75 more)
