[package]
name = "fittle"
version = "0.1.0"
authors = ["Jason Gedge"]
edition = "2018"
description = "A set of tools and libraries for parsing FIT files"
keywords = ["fits", "parser", "garmin", "fittle"]
homepage = "https://github.com/thegedge/fittle"
repository = "https://github.com/thegedge/fittle"
categories = ["parsing"]
license = "MIT"

[dependencies]
byteorder = "1.2"
lazy_static = "1.3"
serde_json = "1.0"
num-traits = "0.2"

  [dependencies.chrono]
  version = "0.4"
  features = ["serde"]

  [dependencies.serde]
  version = "1.0"
  features = ["derive"]

  [dependencies.uom]
  version = "0.21.1"
  features = ["use_serde", "i8", "i16", "i32", "u8", "u16", "u32"]

[workspace]
members = ["profile-gen"]
