[package]
name = "fittle-profile-gen"
version = "0.1.0"
authors = ["Jason Gedge"]
edition = "2018"
description = "A tool to generate Rust code for a FIT profile"

[dependencies]
calamine = "0.15"
handlebars = "1.1"
Inflector = "0.11"
indoc = "0.3"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
